--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Challenge your knowledge and have fun"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Malawi Quiz App</title><script defer="defer" src="/static/js/main.0c203b46.js"></script><link href="/static/css/main.6cb0bec0.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<html>
+    <title> Test Share</title>
+    <body>
+        <h1> Test FB Share Button</h1>
+    </body>
+</html>
